Enhance references and metrics in OCR and translation sections
- Updated reference formatting for Touvron et al. and added citations for Smith et al., Wang et al., and Chen et al. in the references.bib file.
- Improved OCR section to include citation for Tesseract.
- Added citations for COMETScore, BERTScore, and chrF metrics in the NLP metrics section.
- Clarified architecture details in the OCR architecture section with citations for DeiT and BERT models.

--- a/sections/subsections/translation-lr.tex
+++ b/sections/subsections/translation-lr.tex
@@ -1,4 +1,4 @@
 Early in 1986, Nagao et al. \cite{nagao1986mt} described the outline of Japanese to English machine translation system. 
-In 2021, Zhou et al. (2021) \cite{zhou2021niutrans} introduced NiuTrans, built on variants of Transformer, Transformer-DLCL (Dynamic Linear Combination of Layers), ODE (Ordinary Differential Equation)-Transformer and vice versa.
+In 2021, Zhou et al. (2021) \cite{zhou2021niutrans} introduced NiuTrans, built on variants of Transformer \cite{vaswani2017attention}, Transformer-DLCL (Dynamic Linear Combination of Layers) \cite{wang2019learning}, ODE (Ordinary Differential Equation)-Transformer \cite{chen2018best} and vice versa.
 Besides, back-translation, knowledge-distillation, post-ensemble and iteractive fine-tuning techniques were applied to improve model performance.
 Later in 2024, Kinugawa et al. \cite{Kinugawa2024WMTNonRepetitive} reported the findings of the WMT 2024 shared task on non-repetitive translation, which is particularly relevant to dialogue translation scenarios where avoiding repetitive expressions is crucial.
