--- a/references.bib
+++ b/references.bib
@@ -89,7 +89,7 @@
 }
 
 @inproceedings{touvron2021deit,
-  title={Training data-efficient image transformers & distillation through attention},
+  title={Training data-efficient image transformers \& distillation through attention},
   author={Touvron, Hugo and Cord, Matthieu and Douze, Matthijs and Massa, Francisco and Sablayrolles, Alexandre and J{\'e}gou, Herv{\'e}},
   booktitle={International Conference on Machine Learning},
   pages={10347--10357},
@@ -231,6 +231,19 @@
 
 % ocr 
 
+@inproceedings{smith2007tesseract,
+  author       = {Smith, Ray},
+  title        = {An Overview of the Tesseract OCR Engine},
+  booktitle    = {Ninth International Conference on Document Analysis and Recognition (ICDAR 2007)},
+  year         = {2007},
+  volume       = {2},
+  pages        = {629--633},
+  publisher    = {IEEE},
+  address      = {Curitiba, Brazil},
+  doi          = {10.1109/ICDAR.2007.4376991},
+  url          = {https://ieeexplore.ieee.org/document/4376991}
+}
+
 @incollection{soykan2024comics,
   author       = {Soykan, Gürkan and Yuret, Deniz and Sezgin, Tevfik Metin},
   title        = {{A Comprehensive Gold Standard and Benchmark for Comics Text Detection and Recognition}},
@@ -318,6 +331,30 @@
   year      = {2021},
   publisher = {Association for Computational Linguistics},
   pages     = {1007--1015}
+}
+
+@inproceedings{wang2019learning,
+  title={Learning Deep Transformer Models for Machine Translation},
+  author={Wang, Qiang and Li, Bei and Xiao, Tong and Zhu, Jingbo and Li, Changliang and Wong, Derek F. and Chao, Lidia S.},
+  booktitle={Proceedings of the 57th Annual Meeting of the Association for Computational Linguistics},
+  pages={1810--1822},
+  year={2019},
+  publisher={Association for Computational Linguistics},
+  address={Florence, Italy},
+  doi={10.18653/v1/P19-1176},
+  url={https://aclanthology.org/P19-1176/}
+}
+
+@inproceedings{chen2018best,
+  title={The Best of Both Worlds: Combining Recent Advances in Neural Machine Translation},
+  author={Chen, Mia Xu and Firat, Orhan and Bapna, Ankur and Johnson, Melvin and Macherey, Wolfgang and Foster, George and Jones, Llion and Schuster, Mike and Shazeer, Noam and Niki, Parmar and Vaswani, Ashish and Uszkoreit, Jakob and Kaiser, Lukasz and Chen, Zhifeng and Wu, Yonghui and Hughes, Macduff},
+  booktitle={Proceedings of the 56th Annual Meeting of the Association for Computational Linguistics (Volume 1: Long Papers)},
+  pages={76--86},
+  year={2018},
+  publisher={Association for Computational Linguistics},
+  address={Melbourne, Australia},
+  doi={10.18653/v1/P18-1008},
+  url={https://aclanthology.org/P18-1008/}
 }
 
 @ARTICLE{nagao1986mt,
