--- a/sections/subsections/ocr.tex
+++ b/sections/subsections/ocr.tex
@@ -5,4 +5,4 @@
     \label{fig:ocr_pipeline}
 \end{figure}
 
-To translate the visual content of speech bubbles into machine-readable text, we integrate the \textbf{MangaOCR} framework. While general-purpose OCR engines (e.g., Tesseract) struggle with the non-linear layout and unique typography of Japanese manga, MangaOCR is specifically architected to handle vertical text, \textbf{furigana} (pronunciation guides), and mixed writing systems.
+To translate the visual content of speech bubbles into machine-readable text, we integrate the \textbf{MangaOCR} framework. While general-purpose OCR engines (e.g., Tesseract \cite{smith2007tesseract}) struggle with the non-linear layout and unique typography of Japanese manga, MangaOCR is specifically architected to handle vertical text, \textbf{furigana} (pronunciation guides), and mixed writing systems.
