Add OCR pipeline subsection with detailed stages and accompanying figure

--- a/main.tex
+++ b/main.tex
@@ -197,6 +197,9 @@
 \subsection{Optical Character Recognition (OCR)}
 \input{sections/subsections/ocr}
 
+\subsubsection{Pipeline}
+\input{sections/subsubsections/ocr-pip}
+
 \subsubsection{Model architecture}
 \input{sections/subsubsections/ocr-arch}
 
