--- a/main.tex
+++ b/main.tex
@@ -89,22 +89,56 @@
 \begin{table}[H]
     \centering
     \large 
-    \begin{tabular}{lll}
+    \begin{tabular}{ll}
+        AP & Average Precision \\
+        \\
+        BERT & Bidirectional Encoder Representations from Transformers \\
+        \\
+        BLEU & Bilingual Evaluation Understudy \\
+        \\
+        CER & Character Error Rate \\
         \\
         CNN & & Convolutional Neural Network \\
         \\
-        COCO & & Common Objects in Context \\
+        COCO & Common Objects in Context \\
         \\
-        ELAN & & Efficient Layer Aggregation Networks\\
+        COMET & Crosslingual Optimized Metric for Evaluation of Translation \\
+        \\
+        DeBERTa & Decoding-enhanced BERT with Disentangled Attention \\
+        \\
+        DeiT & Data-efficient Image Transformer \\
+        \\
+        ELAN & Efficient Layer Aggregation Networks\\
+        \\
+        FN & False Negatives \\
+        \\
+        FP & False Positives \\
+        \\
+        FPN & Feature Pyramid Network \\
+        \\
+        IoU & Intersection over Union \\
+        \\
+        JSON & JavaScript Object Notation \\
+        \\
+        mAP & mean Average Precision \\
+        \\
+        MSA & Multi-Head Self-Attention \\
+        \\
+        MT & Machine Translation \\
+        \\
+        NLP & Natural Language Processing \\
         \\
         OCR & & Optical Character Recognition \\
         \\
-        YOLO & & You Only Look Once\\
+        PAN & Path Aggregation Network \\
         \\
-        BLEU & & Bilingual Evaluation Understudy \\
+        RoBERTa & Robustly Optimized BERT Pretraining Approach \\
+        \\
+        TP & True Positives \\
         \\
         UC & & Use Case\\
         \\
+        ViT & Vision Transformer \\
     \end{tabular}
 \end{table}
 
