--- a/sections/subsubsections/ocr-arch.tex
+++ b/sections/subsubsections/ocr-arch.tex
@@ -3,7 +3,7 @@ The architecture of the Manga-OCR model is illustrated in Figure \ref{fig:manga-
 
 \begin{figure}[H]
     \centering
-    \includegraphics[width=0.8\textwidth]{img/manga-ocr-pipeline.png}
+    \includegraphics[width=\textwidth]{img/manga-ocr-pipeline.png}
     \caption{Manga-OCR Model Architecture}
     \label{fig:manga-ocr-architecture}
 \end{figure}
