--- a/main.tex
+++ b/main.tex
@@ -100,7 +100,7 @@
         \\
         CNN & & Convolutional Neural Network \\
         \\
-        COCO & Common Objects in Context \\
+        COCO & & Common Objects in Context \\
         \\
         COMET & Crosslingual Optimized Metric for Evaluation of Translation \\
         \\
