--- a/main.tex
+++ b/main.tex
@@ -1,5 +1,5 @@
 \documentclass[13pt]{article}
-\usepackage[a4paper, tmargin=1.5cm, lmargin=1.5cm, rmargin=1.5cm, bmargin=1.5cm]{geometry}
+\usepackage[a4paper, tmargin=2.5cm, lmargin=3cm, rmargin=3cm, bmargin=2.5cm]{geometry}
 \usepackage{hyperref}
 %\usepackage{multicol}
 \hypersetup{
@@ -89,21 +89,21 @@
 \begin{table}[H]
     \centering
     \large 
-    \begin{tabular}{ll}
+    \begin{tabular}{lll}
         \\
-        CNN & Convolutional Neural Network \\
+        CNN & & Convolutional Neural Network \\
         \\
-        COCO & Common Objects in Context \\
+        COCO & & Common Objects in Context \\
         \\
-        ELAN & Efficient Layer Aggregation Networks\\
+        ELAN & & Efficient Layer Aggregation Networks\\
         \\
-        OCR & Optical Character Recognition \\
+        OCR & & Optical Character Recognition \\
         \\
-        YOLO & You Only Look Once\\
+        YOLO & & You Only Look Once\\
         \\
-        BLEU & Bilingual Evaluation Understudy \\
+        BLEU & & Bilingual Evaluation Understudy \\
         \\
-        UC & Use Case\\
+        UC & & Use Case\\
         \\
     \end{tabular}
 \end{table}
@@ -132,10 +132,10 @@
 \input{sections/subsections/bubble-lr}
 \subsection{Optical Character Recognition (OCR)}
 \input{sections/subsections/ocr-lr}
-\subsection{Machine Translation}
+\subsection{Layout Analysis and Reading Order in Comics}
+\input{sections/subsections/layout-lr}
+\subsection{Machine Translation and Typesetting}
 \input{sections/subsections/translation-lr}
-\subsection{Typesetting}
-\input{sections/subsections/typesetting-lr}
 
 \section{Methodology}
 \subsection{Overall Pipeline}
