--- a/sections/subsections/ocr-lr.tex
+++ b/sections/subsections/ocr-lr.tex
@@ -1,3 +1,4 @@
+Optical character recognition (OCR) plays a critical role in manga translation by converting text within segmented speech balloons into machine-readable form.
 Early in 2012, Ranjini and Sundaresan \cite{Ranjini2012TwoBlobsComic} employed connected component analysis and edge-based features to extract English text from comic images.
 A similar text detection task was later addressed by Aramaki et al. \cite{Aramaki2016TextDetectionManga} in 2016, who combined connected-component-based and region-based classification.
 In the same year, Hirata et al. \cite{hirata2016comics} employed an image operator learning method generating binary segmentation in pixel level. 
