--- a/sections/subsections/typeset.tex
+++ b/sections/subsections/typeset.tex
@@ -8,11 +8,14 @@ Typesetting is the final step in the manga translation pipeline. It takes the ou
     \hline
     \textbf{Component} & \textbf{Purpose} \\
     \hline
-    Whitening & Erasing the original Japanese characters by filling the eroded mask region with white pixels.\\
+    Whitening & Erasing the original Japanese characters by filling the eroded mask region \\
+    
+    & with white pixels.\\
     \hline 
     Text Rendering & Rendering the text in the bubble mask.\\
     \hline
-    Collision Detection & Ensuring that the rendered text does not collide with the bubble boundary.\\
+    Collision Detection & Ensuring that the rendered text does not collide with \\
+    & the bubble boundary.\\
     \hline
     Typesetting & Typesetting the text in the bubble mask.\\
     \hline
