--- a/sections/subsections/translation-lr.tex
+++ b/sections/subsections/translation-lr.tex
@@ -1,4 +1,11 @@
+Manga translation is an increasingly popular topic in applied research; however, there is a lack of academic studies focusing specifically on Japanese-to-English manga translation.
 Early in 1986, Nagao et al. \cite{nagao1986mt} described the outline of Japanese to English machine translation system. 
 In 2021, Zhou et al. (2021) \cite{zhou2021niutrans} introduced NiuTrans, built on variants of Transformer, Transformer-DLCL (Dynamic Linear Combination of Layers), ODE (Ordinary Differential Equation)-Transformer and vice versa.
 Besides, back-translation, knowledge-distillation, post-ensemble and iteractive fine-tuning techniques were applied to improve model performance.
 Later in 2024, Kinugawa et al. \cite{Kinugawa2024WMTNonRepetitive} reported the findings of the WMT 2024 shared task on non-repetitive translation, which is particularly relevant to dialogue translation scenarios where avoiding repetitive expressions is crucial.
+In the same year, Kaino et al. \cite{kaino2024utilizing} proposed two new approaches to capture contextual information in machine translation for manga: scene-based translation and machine translation incorporating bibliographic attributes: series, author, publisher, magazine and genre.
+In manga translation pipelines, translation is typically followed by the typesetting phase, which encompasses both the reinsertion of translated text into speech balloons and the removal of original text to prepare clean background regions. 
+Within this context, text removal is a crucial supporting step for typesetting. 
+In 2020, Ko et al. \cite{ko2020sickzil} proposed an automated framework for text removal in comics that integrates deep learning with image processing techniques. 
+The framework consists of two main stages: pixel-level text segmentation followed by text erasure using inpainting to restore the surrounding visual content.
+ 
