--- a/references.bib
+++ b/references.bib
@@ -503,17 +503,29 @@
   url={https://aclanthology.org/W15-3049/}
 }
 
-@inproceedings{popovic2017chrf++,
-  title={chrF++: words helping character n-grams},
-  author={Popovi{\'c}, Maja},
-  booktitle={Proceedings of the Second Conference on Machine Translation},
-  pages={612--618},
-  year={2017},
-  publisher={Association for Computational Linguistics},
-  address={Copenhagen, Denmark},
-  doi={10.18653/v1/W17-4770},
-  url={https://aclanthology.org/W17-4770/}
+@inproceedings{popovic-2017-chrf,
+    title = "chr{F}++: words helping character n-grams",
+    author = "Popovi{\'c}, Maja",
+    editor = "Bojar, Ond{\v{r}}ej  and
+      Buck, Christian  and
+      Chatterjee, Rajen  and
+      Federmann, Christian  and
+      Graham, Yvette  and
+      Haddow, Barry  and
+      Huck, Matthias  and
+      Yepes, Antonio Jimeno  and
+      Koehn, Philipp  and
+      Kreutzer, Julia",
+    booktitle = "Proceedings of the Second Conference on Machine Translation",
+    month = sep,
+    year = "2017",
+    address = "Copenhagen, Denmark",
+    publisher = "Association for Computational Linguistics",
+    url = "https://aclanthology.org/W17-4770/",
+    doi = "10.18653/v1/W17-4770",
+    pages = "612--618"
 }
+
 % typeset nè
 @incollection{ko2020sickzil,
   author       = {Ko, U-Ram and Cho, Hwan-Gue},
