--- a/sections/subsubsections/ocr-pip.tex
+++ b/sections/subsubsections/ocr-pip.tex
@@ -1,6 +1,6 @@
 The OCR pipeline processes segmented speech bubble regions through a systematic sequence of extraction, recognition, and refinement operations to convert visual Japanese text into machine-readable characters, as illustrated in Figure \ref{fig:ocr_pipeline}.
 
-\begin{figure}[htbp]
+\begin{figure}[H]
     \centering
     \includegraphics[width=\textwidth]{img/ocr_pipeline.png}
     \caption{OCR Pipeline}
