--- a/main.tex
+++ b/main.tex
@@ -128,7 +128,7 @@
         \\
         NLP & Natural Language Processing \\
         \\
-        OCR & & Optical Character Recognition \\
+        OCR & Optical Character Recognition \\
         \\
         PAN & Path Aggregation Network \\
         \\
