--- a/main.tex
+++ b/main.tex
@@ -88,8 +88,10 @@
 \section*{List of Abbreviations}
 \vspace{2em}
 \addtocontents{toc}{\protect\setcounter{tocdepth}{3}}
-\begin{center}
-\begin{tabular}{@{}ll@{}}
+\begin{table}[H]
+    \centering
+    \large 
+    \begin{tabular}{ll}
         AP & Average Precision \\
         \\
         BERT & Bidirectional Encoder Representations from Transformers \\
@@ -139,8 +141,8 @@
         UC & Use Case\\
         \\
         ViT & Vision Transformer \\
-\end{tabular}
-\end{center}
+    \end{tabular}
+\end{table}
 
 \newpage
 \tableofcontents
